--- a/chrome-extension/src/index.html
+++ b/chrome-extension/src/index.html
@@ -543,15 +543,6 @@
 		</div>
 
 		<link href="index.css" rel="stylesheet" type="text/css" />
-		<!-- <script type="module" src="./js/popup.js"></script> -->
-		<script type="module" src="./js/Settings/settings.js"></script>
-		<link rel="preconnect" href="https://fonts.googleapis.com" /><link
-			rel="preconnect"
-			href="https://fonts.gstatic.com"
-			crossorigin
-		/><link
-			href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap"
-			rel="stylesheet"
-		/>
+		<script type="module" src="./js/settigs/settings.js"></script>
 	</body>
 </html>
