--- a/chrome-extension/src/index.html
+++ b/chrome-extension/src/index.html
@@ -548,5 +548,6 @@
 
 		<link href="index.css" rel="stylesheet" type="text/css" />
 		<script type="module" src="./js/settings/settings.js"></script>
+		<script type="module" src="./js/theme/theme.js"></script>
 	</body>
 </html>
